--- a/app/src/main/res/layout/activity_photo_gallery.xml
+++ b/app/src/main/res/layout/activity_photo_gallery.xml
@@ -5,5 +5,5 @@
     android:id="@+id/fragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PhotoGalleryActivity"/>
+    tools:context=".ui.PhotoGalleryActivity"/>
 
